# ai-native-hedge-fund

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  advanced_alpha.py  alembic.ini  docker-compose.oracle.yml  docker-compose.yml  llm_router.py  probabilistic_core.py  pyproject.toml  railway.json  render.yaml  requirements.txt  research.py  strategy_stack.py
alembic/: env.py
app/: api.py  streamlit_app.py
configs/: backtest_fast.yaml  default.yaml  live_stub.yaml  performance_v2.yaml  tuned_walkforward.yaml
deploy/: free-hosting.md
free_fund/: advanced_alpha.py  agents.py  ai_forecast_calibration.py  alerts.py  audit.py  backtest.py  benchmark_relative_optimizer.py  brokers.py  celery_app.py  cli.py  config.py  contracts.py  data.py  data_quality.py  db.py  env_utils.py  flags.py  healthcheck.py  logging.py  mcp_server.py  meta_router.py  metrics.py  models.py  orchestrator.py  paper.py  regime.py  research.py  research_council.py  resilience.py  signal_quality_gate.py  strategy_stack.py  tasks.py  tracing.py
outputs/: ai_alpha_latest.json  bayesian_weights_latest.json
scripts/: backtest_ai_native_v2.py  backtest_orchestrator_stack.py  backtest_performance_v2.py  debug_import.py  diagnose_cycle_drift.py  diagnose_exposure.py  diagnose_signals.py  diagnose_single_cycle.py  generate_performance_media.py  healthcheck.py  live.py  optimize_walkforward.py  run_ablation.py  run_backtest.py  run_daily.py  run_if_india_market_open.py  run_mcp_server.py  run_nanoback_backtest.py  run_nanoback_etf_compare.py  run_realtime.py
tests/: test_agent_failures.py  test_ai_native_additions.py  test_audit_chain.py  test_broker_vcr.py  (+5 more)
(+203 files in other folders)
